--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
     <footer class="footer center">
     <div class="footer__law">>Все права защищены.</div>
     </footer>
+    <script src="script.js"></script>
   </body>
   </html>
