--- a/index.html
+++ b/index.html
@@ -13,27 +13,30 @@
   <body>
     <div class="head center">
       <div class="head__top">
-        <img class="small" src="/img.html/Star 3.svg">
-        <img class="big" src="/img.html/Star 2.svg">
+        <img class="small" src="img/Star 3.svg">
+        <img class="big" src="img/Star 2.svg">
         <br><h1 class="title">Добро пожаловать на мой сайт мини-игры</h1></br>
         <p class="name">Вам предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</p>
         <a href="#top"><button class="lets">Поехали!</button></a>
-        <img class="star" src="/img.html/Star 5.svg">
-        <img class="stars" src="/img.html/Star 4.svg">
-        <img class="biges" src="/img.html/Group 1.svg" alt="Пиктер">
-        <section class="navigation"></section>
+        <img class="star" src="img/Star 5.svg">
+        <img class="stars" src="img/Star 4.svg">
+        <img class="biges" src="img/Group 1.svg" alt="Пиктер">
       </div>
     </div>
+        <section class="navigation center"></section>
+     
+   
     <div id="top">
       <div class="top center">
         <h2 class="top__title">Об играх</h2>
-        <p class="names">В них может поиграть каждый. Все игры доступны для использования.</p>
+        <p class="names">В моей коллекции представлено 6 игр на разные темы.Игры несложные — в них может поиграть каждый.
+          Все игры доступны для пользования.</p>
         <div class="top__game">
           <div class="top__pisk">
             <a href="#game1" class="top__card">
               <div class="top__card">
-                <img src="/img.html/1.svg" alt="Игра1" class="games">
-                <div class="game">
+                <img src="img/1.svg" alt="Игра1" class="games">
+                <div class="gamers">
                   <p class="game__namber">Игра № 1</p>
                   <p class="top__link">Угадай число</p>
                 </div>
@@ -41,7 +44,7 @@
             </a>
             <a href="#game4" class="top__card">
               <div class="top__card">
-                <img src="/img.html/4.svg" alt="Игра4" class="games">
+                <img src="img/4.svg" alt="Игра4" class="games">
                 <div class="game">
                   <p class="game__namber">Игра № 4</p>
                   <p class="top__link">Камень, ножницы, бумага</p>
@@ -50,19 +53,19 @@
             </a>
           </div>
           <div class="top__pisks">
-            <a href="#game2" class="top__card">
-              <div class="top__card">
-                <img src="/img.html/2.svg" alt="игры">
-                <div class="game">
+            <a href="#game2" class="top__cards">
+              <div class="top__cards">
+                <img src="img/2.svg" alt="Игра2" class="games">
+                <div class="gamer">
                   <p class="game__namber">Игра №2</p>
                   <p class="top__link">Простая арифметика</p>
                 </div>
               </div>
             </a>
-            <a href="#game5" class="top__card">
-              <div class="top__card">
-                <img src="/img.html/5.svg" alt="игры">
-                <div class="game">
+            <a href="#game5" class="top__cards">
+              <div class="top__cards">
+                <img src="img/5.svg" alt="Игра5" class="games">
+                <div class="gamer">
                   <p class="game__namber">Игра №5</p>
                   <p class="top__link">Простая викторина</p>
                 </div>
@@ -72,8 +75,8 @@
           <div class="top__pisksi">
             <a href="#game3" class="top__card">
               <div class="top__card">
-                <img src="/img.html/3.svg" alt="игры">
-                <div class="game">
+                <img src="img/3.svg" alt="Игра3" class="games">
+                <div class="gamers">
                   <p class="game__namber">Игра №3</p>
                   <p class="top__link">Переверни текст</p>
                 </div>
@@ -81,7 +84,7 @@
             </a>
             <a href="#game6" class="top__card">
               <div class="top__card">
-                <img src="/img.html/6.svg" alt="игры">
+                <img src="img/6.svg" alt="Игра6" class="games">
                 <div class="game">
                   <p class="game__namber">Игра №6</p>
                   <p class="top__link">Генератор случайных цветов</p>
@@ -140,7 +143,7 @@
         </div>
     </div>
     <footer class="footer center">
-    <div class="footer__law">>Все права защищены.</div>
+    <div class="footer__law">Все права защищены.</div>
     </footer>
     <script src="script.js"></script>
   </body>
