исправила картинки и отступы

--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
   <body>
     <div class="head center">
       <div class="head__top">
-        <img class="small" src="img/Star 3.svg">
-        <img class="big" src="img/Star 2.svg">
+        <img class="small" src="./img/Star 2.svg" alt="star">
+        <img class="big" src="./img/Star 2.svg" alt="star">
         <br><h1 class="title">Добро пожаловать на мой сайт мини-игры</h1></br>
-        <p class="name">Вам предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</p>
+        <p class="name">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</p>
         <a href="#top"><button class="lets">Поехали!</button></a>
-        <img class="star" src="img/Star 5.svg">
-        <img class="stars" src="img/Star 4.svg">
-        <img class="biges" src="img/Group 1.svg" alt="Пиктер">
+        <img class="star" src="./img/Star 5.svg" alt="star">
+        <img class="stars" src="./img/Star 4.svg" alt="star">
+        <img class="biges" src="./img/Group 1.svg" alt="Пиктер">
       </div>
     </div>
         <section class="navigation center"></section>
-     
-   
     <div id="top">
       <div class="top center">
         <h2 class="top__title">Об играх</h2>
