поправки сделала со звездой

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         </div>
       </div>
     </div>
+    <div class="min">
     <div class="mingame center">
         <h2 class="top__title">Мини-игры</h2>
         <div class="mingame__cards">
@@ -140,6 +141,7 @@
         </div>
         </div>
     </div>
+  </div>
     <footer class="footer center">
     <div class="footer__law">Все права защищены.</div>
     </footer>
