сделаны доработки по мобильной версии

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="head center">
       <div class="head__top">
+        <img class="big__one" src="./img/Vector.svg" alt="star">
         <img class="small" src="./img/Star 2.svg" alt="star">
         <img class="big" src="./img/Star 2.svg" alt="star">
         <br><h1 class="title">Добро пожаловать на мой сайт мини-игры</h1></br>
@@ -28,6 +29,7 @@
         <h2 class="top__title">Об играх</h2>
         <p class="names">В моей коллекции представлено 6 игр на разные темы.Игры несложные — в них может поиграть каждый.
           Все игры доступны для пользования.</p>
+          <img class="top__s" src="./img/Star 1.svg" alt="star">
         <div class="top__game">
           <div class="top__pisk">
             <a href="#game1" class="top__card">
@@ -108,9 +110,9 @@
         </div>
         </div>
         <div id="game2">
-        <div class="mingame__games">
+        <div class="mingame__game">
             <img class="mingame__card" src="./img/min2.svg" alt="cart">
-         <div class="mingame__part">
+         <div class="mingame__parts">
               <p class="mingame__name">Простая арифметика</p>
               <p class="mingame__try">Попробуйте решить простые арифметические задачи.</p>
               <a href="#game2">
@@ -119,10 +121,10 @@
         </div>
         </div>
         <div id="game3">
-        <div class="mingame__games">
-        <div class="mingame__part">
-            <p class="mingame__names">Переверни текст</p>
-            <p class="mingame__try">Попробуй ввести текст, который будет перевернут.</p>
+        <div class="mingame__games_one">
+        <div class="mingame__parts">
+            <p class="mingame__names_one">Переверни текст</p>
+            <p class="mingame__try_one">Попробуй ввести текст, который будет перевернут.</p>
             <a href="#game3">
             <button class="mingame__play">Играть!</button></a>
           </div>
@@ -130,21 +132,21 @@
           </div>
         </div>
         <div id="game5">
-          <div class="mingame__games">
+          <div class="mingame__game">
             <img class="mingame__card" src="./img/min4.svg" alt="cart">
-            <div class="mingame__part">
-              <p class="mingame__names"> Викторина</p>
-              <p class="mingame__try">Отвечайте на вопросы победившими вариантами ответов.</p>
+            <div class="mingame__parts">
+              <p class="mingame__names_one"> Простая викторина</p>
+              <p class="mingame__try_to">Отвечайте на вопросы победившими вариантами ответов.</p>
               <a href="#game5">
               <button class="mingame__play">Играть!</button></a>
             </div>
           </div>
           </div>
         <div id="game4">
-        <div class="mingame__games">
-        <div class="mingame__part">
-            <p class="mingame__name">Камень, ножницы, бумага</p>
-            <p class="mingame__try">Сыграй в популярную игру против компьютера.</p>
+        <div class="mingame__games_to">
+        <div class="mingame__parts_one">
+            <p class="mingame__name_one">Камень, ножницы, бумага</p>
+            <p class="mingame__try_one">Сыграй в популярную игру против компьютера.</p>
             <a href="#game4">
             <button class="mingame__play">Играть!</button></a>
           </div>
@@ -152,11 +154,11 @@
         </div>
         </div>
        <div id="game6">
-        <div class="mingame__games">
+        <div class="mingame__game_one">
           <img class="mingame__card" src="./img/min6.svg" alt="cart">
-          <div class="mingame__part">
-            <p class="mingame__name">Генератор случайных цветов</p>
-            <p class="mingame__try">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
+          <div class="mingame__parts_to">
+            <p class="mingame__name_one">Генератор случайных цветов</p>
+            <p class="mingame__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
             <a href="#game6">
             <button class="mingame__play">Играть!</button></a>
           </div>
