мобильная версия дополнена

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
               </div>
             </a>
             <a href="#game4" class="top__card">
-              <div class="top__card">
+              <div class="top__card_one">
                 <img src="img/4.svg" alt="Игра4" class="games">
                 <div class="game">
                   <p class="game__namber">Игра № 4</p>
-                  <p class="top__link">Камень, ножницы, бумага</p>
+                  <p class="top__links">Камень, ножницы, бумага</p>
                 </div>
               </div>
             </a>
@@ -94,73 +94,73 @@
         </div>
       </div>
     </div>
-    <div class="min">
-    <div class="mingame center">
+    <div class="mingame">
+    <div class="min center">
         <h2 class="top__titles">Мини-игры</h2>
-        <div class="mingame__cards">
+        <div class="min__cards">
         <div id="game1">
-        <div class="mingame__games">
-        <div class="mingame__part">
-           <p class="mingame__names">Угадай число</p>
-            <p class="mingame__try">Попробуйте угадать случайное число от 1 до 100.</p>
+        <div class="min__games">
+        <div class="min__part">
+           <p class="min__names">Угадай число</p>
+            <p class="min__try">Попробуйте угадать случайное число от 1 до 100.</p>
             <a href="#game1">
-            <button class="mingame__play">Играть!</button></a>
+            <button class="min__play">Играть!</button></a>
           </div>
-            <img class="mingame__card" src="./img/min1.svg" alt="cart">
+            <img class="min__card" src="./img/min1.svg" alt="cart">
         </div>
         </div>
         <div id="game2">
-        <div class="mingame__game">
-            <img class="mingame__card" src="./img/min2.svg" alt="cart">
-         <div class="mingame__parts">
-              <p class="mingame__name">Простая арифметика</p>
-              <p class="mingame__try">Попробуйте решить простые арифметические задачи.</p>
+        <div class="min__game">
+            <img class="min__card" src="./img/min2.svg" alt="cart">
+         <div class="min__parts">
+              <p class="min__name">Простая арифметика</p>
+              <p class="min__try">Попробуйте решить простые арифметические задачи.</p>
               <a href="#game2">
-              <button class="mingame__play">Играть!</button></a>
+              <button class="min__play">Играть!</button></a>
             </div>
         </div>
         </div>
         <div id="game3">
-        <div class="mingame__games_one">
-        <div class="mingame__parts">
-            <p class="mingame__names_one">Переверни текст</p>
-            <p class="mingame__try_one">Попробуй ввести текст, который будет перевернут.</p>
+        <div class="min__games_one">
+        <div class="min__parts">
+            <p class="min__names_one">Переверни текст</p>
+            <p class="min__try_one">Попробуй ввести текст, который будет перевернут.</p>
             <a href="#game3">
-            <button class="mingame__play">Играть!</button></a>
+            <button class="min__play">Играть!</button></a>
           </div>
-            <img class="mingame__card" src="./img/min3.svg" alt="cart">
+            <img class="min__card" src="./img/min3.svg" alt="cart">
           </div>
         </div>
         <div id="game5">
-          <div class="mingame__game">
-            <img class="mingame__card" src="./img/min4.svg" alt="cart">
-            <div class="mingame__parts">
-              <p class="mingame__names_one"> Простая викторина</p>
-              <p class="mingame__try_to">Отвечайте на вопросы победившими вариантами ответов.</p>
+          <div class="min__game">
+            <img class="min__card" src="./img/min4.svg" alt="cart">
+            <div class="min__parts">
+              <p class="min__names_one"> Простая викторина</p>
+              <p class="min__try_to">Отвечайте на вопросы победившими вариантами ответов.</p>
               <a href="#game5">
-              <button class="mingame__play">Играть!</button></a>
+              <button class="min__play">Играть!</button></a>
             </div>
           </div>
           </div>
         <div id="game4">
-        <div class="mingame__games_to">
-        <div class="mingame__parts_one">
-            <p class="mingame__name_one">Камень, ножницы, бумага</p>
-            <p class="mingame__try_one">Сыграй в популярную игру против компьютера.</p>
+        <div class="min__games_to">
+        <div class="min__parts_one">
+            <p class="min__name_one">Камень, ножницы, бумага</p>
+            <p class="min__try_one">Сыграй в популярную игру против компьютера.</p>
             <a href="#game4">
-            <button class="mingame__play">Играть!</button></a>
+            <button class="min__play">Играть!</button></a>
           </div>
-          <img class="mingame__card" src="./img/min5.svg" alt="cart">
+          <img class="min__card" src="./img/k.svg" alt="cart">
         </div>
         </div>
        <div id="game6">
-        <div class="mingame__game_one">
-          <img class="mingame__card" src="./img/min6.svg" alt="cart">
-          <div class="mingame__parts_to">
-            <p class="mingame__name_one">Генератор случайных цветов</p>
-            <p class="mingame__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
+        <div class="min__game_one">
+          <img class="min_card" src="./img/min6.svg" alt="cart">
+          <div class="min__parts_to">
+            <p class="min__name_one">Генератор случайных цветов</p>
+            <p class="min__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
             <a href="#game6">
-            <button class="mingame__play">Играть!</button></a>
+            <button class="min__play">Играть!</button></a>
           </div>
         </div>
         </div>
