сделала поправки в шрифте кнопки

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </a>
             <a href="#game4" class="top__card">
               <div class="top__card_one">
-                <img src="img/4.svg" alt="Игра4" class="games">
+                <img src="img/game.png" alt="Игра4" class="games">
                 <div class="game">
                   <p class="game__namber">Игра № 4</p>
                   <p class="top__links">Камень, ножницы, бумага</p>
@@ -150,7 +150,7 @@
             <a href="#game4">
             <button class="min__play">Играть!</button></a>
           </div>
-          <img class="min__card" src="./img/k.svg" alt="cart">
+          <img class="min__card" src="./img/game.png" alt="cart">
         </div>
         </div>
        <div id="game6">
