--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
   <div class="head center">
       <div class="head__top">
-        <img class="big__one" src="./img/Vector.svg" alt="star">
         <img class="small" src="./img/Star 2.svg" alt="star">
         <img class="big" src="./img/Star 2.svg" alt="star">
         <br><h1 class="title">Добро пожаловать на мой сайт мини-игры</h1></br>
@@ -21,6 +20,7 @@
         <img class="stars" src="./img/Star 4.svg" alt="star">
         <img class="bigs" src="./img/bigest.svg" alt="star">
         <img class="biges" src="./img/Group 1.svg" alt="Пиктер">
+        <img class="big__one" src="./img/bigest.svg" alt="Пиктер">
       </div>
     </div>
         <section class="navigation center"></section>
@@ -34,7 +34,7 @@
           <div class="top__pisk">
             <a href="#game1" class="top__card">
               <div class="top__card">
-                <img src="img/1.svg" alt="Игра1" class="games">
+                <img src="./img/1 (2).svg" alt="Игра1" class="games">
                 <div class="gamers">
                   <p class="game__namber">Игра № 1</p>
                   <p class="top__link">Угадай число</p>
