исправила ошибки по отступам

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
        <div id="game6">
         <div class="min__game_one">
-          <img class="min_card" src="./img/min6.svg" alt="cart">
+          <img class="min__card" src="./img/min6.svg" alt="cart">
           <div class="min__parts_to">
             <p class="min__name_one">Генератор случайных цветов</p>
             <p class="min__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
