сделала первую игру "угадай число"

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <div class="min__games">
         <div class="min__part">
            <p class="min__names">Угадай число</p>
-            <p class="min__try">Попробуйте угадать случайное число от 1 до 100.</p>
+           <p class="min__try">Попробуйте угадать случайное число от 1 до 100.</p>
             <a href="#game1">
-            <button class="min__play">Играть!</button></a>
+            <button onclick="startGame1()" class="min__play">Играть!</button></a>
           </div>
             <img class="min__card" src="./img/min1.svg" alt="cart">
         </div>
@@ -171,6 +171,6 @@
     <footer class="footer center">
     <div class="footer__law">Все права защищены.</div>
     </footer>
-    <script src="script.js"></script>
+    <script src="games.js"></script>
   </body>
 </html>
