сделала поправки в заголовке

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <a href="#top"><button class="lets">Поехали!</button></a>
         <img class="star" src="./img/Star 5.svg" alt="star">
         <img class="stars" src="./img/Star 4.svg" alt="star">
-        <img class="bigs" src="./img/bigest.svg" alt="star">
         <img class="biges" src="./img/Group 1.svg" alt="Пиктер">
         <img class="big__one" src="./img/bigest.svg" alt="Пиктер">
       </div>
@@ -112,12 +111,12 @@
         <div id="game2">
         <div class="min__game">
             <img class="min__card" src="./img/min2.svg" alt="cart">
-         <div class="min__parts">
+          <div class="min__parts">
               <p class="min__name">Простая арифметика</p>
               <p class="min__try">Попробуйте решить простые арифметические задачи.</p>
               <a href="#game2">
-              <button class="min__play">Играть!</button></a>
-            </div>
+              <button onclick="runQuiz()" class="min__play">Играть!</button></a>
+          </div>
         </div>
         </div>
         <div id="game3">
@@ -171,6 +170,7 @@
     <footer class="footer center">
     <div class="footer__law">Все права защищены.</div>
     </footer>
-    <script src="games.js"></script>
+    <script src="quis.js"></script>
+  
   </body>
 </html>
