подключила файл с играми

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <footer class="footer center">
     <div class="footer__law">Все права защищены.</div>
     </footer>
-    <script src="quis.js"></script>
+    <script src="games.js"></script>
   
   </body>
 </html>
