убрала отступ над заголовком

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="head__top">
         <img class="small" src="./img/Star 2.svg" alt="star">
         <img class="big" src="./img/Star 2.svg" alt="star">
-        <br><h1 class="title">Добро пожаловать на мой сайт мини-игры</h1></br>
+        <h1 class="title">Добро пожаловать на мой сайт мини-игры</h1>
         <p class="name">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</p>
         <a href="#top"><button class="lets">Поехали!</button></a>
         <img class="star" src="./img/Star 5.svg" alt="star">
