исправила кавычки на обратные

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="min__part">
            <p class="min__names">Угадай число</p>
            <p class="min__try">Попробуйте угадать случайное число от 1 до 100.</p>
-            <a href="#game1">
-            <button onclick="startGame1()" class="min__play">Играть!</button></a>
+            <a href="#game1"></a>
+            <button onclick="startGame1()" class="min__play">Играть!</button>
           </div>
             <img class="min__card" src="./img/min1.svg" alt="cart">
         </div>
@@ -114,8 +114,8 @@
           <div class="min__parts">
               <p class="min__name">Простая арифметика</p>
               <p class="min__try">Попробуйте решить простые арифметические задачи.</p>
-              <a href="#game2">
-              <button onclick="runQuiz()" class="min__play">Играть!</button></a>
+              <a href="#game2"></a>
+              <button onclick="runQuiz()" class="min__play">Играть!</button>
           </div>
         </div>
         </div>
