выполнено задание по встроенным обьектам

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <div class="min__parts">
             <p class="min__names_one">Переверни текст</p>
             <p class="min__try_one">Попробуй ввести текст, который будет перевернут.</p>
-            <a href="#game3">
-            <button class="min__play">Играть!</button></a>
+            <a href="#game3"></a>
+            <button onclick="flipText()" class="min__play">Играть!</button>
           </div>
             <img class="min__card" src="./img/min3.svg" alt="cart">
           </div>
@@ -136,8 +136,8 @@
             <div class="min__parts">
               <p class="min__names_one"> Простая викторина</p>
               <p class="min__try_to">Отвечайте на вопросы победившими вариантами ответов.</p>
-              <a href="#game5">
-              <button class="min__play">Играть!</button></a>
+              <a href="#game5"></a>
+              <button onclick="startQuiz()" class="min__play">Играть!</button>
             </div>
           </div>
           </div>
