задания сделаны и игра подключена"камень,ножницы,бумага"

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <div class="min__parts_one">
             <p class="min__name_one">Камень, ножницы, бумага</p>
             <p class="min__try_one">Сыграй в популярную игру против компьютера.</p>
-            <a href="#game4">
-            <button class="min__play">Играть!</button></a>
+            <a href="#game4"></a>
+            <button onclick=" playGame()" class="min__play">Играть!</button>
           </div>
           <img class="min__card" src="./img/game.png" alt="cart">
         </div>
