--- a/index.html
+++ b/index.html
@@ -158,10 +158,9 @@
           <div class="min__parts_to">
             <p class="min__name_one">Генератор случайных цветов</p>
             <p class="min__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
-            <a href="#game6">
-            <button class="min__play">Играть!</button></a>
+            <a href="#game6"></a>
+            <button onclick="changeColor()" class="min__play">Играть!</button>
           </div>
-        </div>
         </div>
         </div>
       </div>
