6 игра с проблемой подключения

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" 
   rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-</head>
+  </head>
 <body>
   <div class="head center">
       <div class="head__top">
@@ -94,9 +94,8 @@
       </div>
     </div>
     <div class="mingame">
-    <div class="min center">
-        <h2 class="top__titles">Мини-игры</h2>
-        <div class="min__cards">
+    <div class="min center" style="background-color: rgb();">
+   <h2 class="top__titles">Мини-игры</h2>
         <div id="game1">
         <div class="min__games">
         <div class="min__part">
@@ -159,7 +158,7 @@
             <p class="min__name_one">Генератор случайных цветов</p>
             <p class="min__trys">Игра, в которой при нажатии на кнопку фон страницы меняется на случайный.</p>
             <a href="#game6"></a>
-            <button onclick="changeColor()" class="min__play">Играть!</button>
+            <button onclick="changeBlockColor()" class="min__play">Играть!</button>
           </div>
         </div>
         </div>
