--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
       </div>
     </div>
     <div class="mingame">
-    <div class="min center" style="background-color: rgb();">
+    <div class="min center">
    <h2 class="top__titles">Мини-игры</h2>
+   <div class="min__cards">
         <div id="game1">
         <div class="min__games">
         <div class="min__part">
@@ -164,6 +165,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
     <footer class="footer center">
     <div class="footer__law">Все права защищены.</div>
